fix the header wrap problem

--- a/public/assets/css/style.less
+++ b/public/assets/css/style.less
@@ -169,7 +169,7 @@ header {
 
   .navbar .navbar-brand {
     font-family: Nanami-Rounded-Lt;
-    min-width: 20em;
+    min-width: 13em;
     padding-top: 15px;
 
     p {
